fixed slider and horizontal scroll width

--- a/main.css
+++ b/main.css
@@ -397,7 +397,7 @@ header {
   position: absolute;
 }
 
-#slide-left {
+.slide-left {
   position: absolute;
   z-index: 2;
   top: 50%;
@@ -409,7 +409,7 @@ header {
   cursor: pointer;
 }
 
-#slide-right {
+.slide-right {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -462,7 +462,7 @@ header {
 }
 
 .content-img-src {
-  width: 100%;
+  width: 90%;
   border-radius: 2px;
   box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.3);
 }
@@ -617,7 +617,7 @@ header {
 }
 
 .resource-cards {
-  width: 150%;
+  width: 140%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
